--- a/client/views/welcome.html
+++ b/client/views/welcome.html
@@ -107,7 +107,8 @@
 				<li>Code highlighting?</li>
 				<li>Implement notification system logic</li>
 				<li><strike>Tagging of chatrooms</strike></li>
-				<li>Global stats</li>
+				<li><strike>Search for interesting chatroom based on tags</strike></li>
+				<li><strike>Global stats</strike></li>
 				<li>@username reply</li>
 			</ul>
 			<br>
