global registered users

--- a/client/views/welcome.html
+++ b/client/views/welcome.html
@@ -84,14 +84,20 @@
 			</div>
 			<div class="globalstat">
 				<div class="vam">
+					<h3>Rooms</h3>
+					<h4 id='globalRoomsCount'></h4>
+				</div>
+			</div>
+			<div class="globalstat">
+				<div class="vam">
 					<h3>Users online</h3>
 					<h4 id='globalOnlineUsersCount'></h4>
 				</div>
 			</div>
 			<div class="globalstat">
 				<div class="vam">
-					<h3>Rooms</h3>
-					<h4 id='globalRoomsCount'></h4>
+					<h3>Registered users</h3>
+					<h4 id='globalRegisteredUsersCount'></h4>
 				</div>
 			</div>
 		</div>
