--- a/client/views/welcome.html
+++ b/client/views/welcome.html
@@ -26,45 +26,45 @@
 			</div>
 		</div>
 	</section>
-	<section class="features">
-		<div class="features-wrapper">
-			<h1 class='features-header'>Features</h1>
-			<div class="feature">
+	<section class="tiles">
+		<div class="tiles-wrapper">
+			<h1 class='tiles-header'>Features</h1>
+			<div class="tile">
 				<div class="vam">
 					<img src="/images/realtime.png">
 					<h6>Chatting</h6>
 					<span>see what other users are typing in realtime</span>
 				</div>
 			</div>
-			<div class="feature">
+			<div class="tile">
 				<div class="vam">
 					<img src="/images/stats.png">
 					<h6><a href="/profile">Stats</a></h6>
 					<span>if you wonder how many characters you typed</span>
 				</div>
 			</div>
-			<div class="feature">
+			<div class="tile">
 				<div class="vam">
 					<img src="/images/search.png">
 					<h6>Interests</h6>
 					<span>find interesting chatrooms</span>
 				</div>
 			</div>
-			<div class="feature">
+			<div class="tile">
 				<div class="vam">
 					<img src="/images/unlocked.png">
 					<h6>Opensource</h6>
 					<span>Would you like to contribute? <a href="https://github.com/christian-fei/opentalk.me" target='_blank'>Here you go</a></span>
 				</div>
 			</div>
-			<div class="feature">
+			<div class="tile">
 				<div class="vam">
 					<img src="/images/speech-bubble.png">
 					<h6><a href="#mdc-modal">Markdown</a></h6>
 					<span>if you're into that thing</span>
 				</div>
 			</div>
-			<div class="feature">
+			<div class="tile">
 				<div class="vam">
 					<img src="/images/mail.png">
 					<h6>Notifications</h6>
@@ -73,31 +73,31 @@
 			</div>
 		</div>
 	</section>
-	<section class="globalstats">
-		<div class="globalstats-wrapper">
-			<h1 class='globalstats-header'>Global stats</h1>
-			<div class="globalstat">
+	<section class="tiles">
+		<div class="tiles-wrapper">
+			<h1 class='tiles-header'>Global stats</h1>
+			<div class="tile">
 				<div class="vam">
 					<h4 id='globalMessagesCount'></h4>
-					<h3>Messages</h3>
+					<h5>Messages</h5>
 				</div>
 			</div>
-			<div class="globalstat">
+			<div class="tile">
 				<div class="vam">
 					<h4 id='globalRoomsCount'></h4>
-					<h3>Rooms</h3>
+					<h5>Rooms</h5>
 				</div>
 			</div>
-			<div class="globalstat">
+			<div class="tile">
 				<div class="vam">
 					<h4 id='globalOnlineUsersCount'></h4>
-					<h3>Users online</h3>
+					<h5>Users online</h5>
 				</div>
 			</div>
-			<div class="globalstat">
+			<div class="tile">
 				<div class="vam">
 					<h4 id='globalRegisteredUsersCount'></h4>
-					<h3>Registered users</h3>
+					<h5>Registered users</h5>
 				</div>
 			</div>
 		</div>
