--- a/client/sass/_welcome.scss
+++ b/client/sass/_welcome.scss
@@ -1,4 +1,3 @@
-
 @mixin inset($light-shadow, $dark-shadow) {
   text-shadow: 
     0px 1px 3px rgba(255,255,255,$light-shadow),
@@ -90,28 +89,10 @@ $offset-y:-400px;
 }
 
 
-/*
-fuuuuck that's sick,
-when i have some time i'll fix it
-oh jeez...
-*/
-.features, .globalstats{
-	@extend .tiles;
-}
-.features-wrapper, .globalstats-wrapper{
-	@extend .tiles-wrapper;
-}
-.feature, .globalstat{
-	@extend .tile;
-}
-.features-header, .globalstats-header{
-	@extend .tiles-header;
-}
 
-.globalstats{
+.tiles:nth-of-type(2n){
 	background:#F0F0F0!important;
 }
-
 
 
 .todos{
@@ -136,11 +117,6 @@ oh jeez...
 	text-align: center;
 	.footer-wrapper{
 		@extend .todos-wrapper;
-
-		//I'm ashamed shame
-		// margin-top:0!important;
-		// border-left: 0!important;
-		// max-width: 26em!important;
 	}
 }
 	.tos{
