--- a/client/css/main.css
+++ b/client/css/main.css
@@ -1057,16 +1057,37 @@ SUPER SLICK TRANSFORMS
 
 /* line 12, ../sass/_messages.scss */
 .message {
-  padding: 0em 0.7em;
+  padding: .2em 0.7em;
   overflow: visible !important;
   background: #fefefe;
   border-left: 1px solid lightgrey;
   border-right: 1px solid lightgrey;
   position: relative;
 }
+/* line 21, ../sass/_messages.scss */
+.message.fadeOffUnread.unread::after {
+  background: transparent;
+  -webkit-transition: all 15s linear;
+  -moz-transition: all 15s linear;
+  -ms-transition: all 15s linear;
+  -o-transition: all 15s linear;
+  transition: all 15s linear;
+}
+/* line 29, ../sass/_messages.scss */
+.message.unread::after {
+  position: absolute;
+  top: 0;
+  left: 0;
+  content: '';
+  display: inline-block;
+  height: 100%;
+  width: 2px;
+  background: #ffdd80;
+}
 
-/* line 24, ../sass/_messages.scss */
+/* line 44, ../sass/_messages.scss */
 .avatar {
+  z-index: 1000;
   height: 1.9em;
   width: 1.9em;
   margin-left: -1.5em;
@@ -1081,12 +1102,12 @@ SUPER SLICK TRANSFORMS
   top: -0.9em;
 }
 
-/* line 44, ../sass/_messages.scss */
+/* line 65, ../sass/_messages.scss */
 .avatar-border {
   border: 1px solid darkgrey;
 }
 
-/* line 47, ../sass/_messages.scss */
+/* line 68, ../sass/_messages.scss */
 .message .text, .message p {
   vertical-align: middle;
   margin: 0em .3em;
@@ -1099,7 +1120,7 @@ SUPER SLICK TRANSFORMS
   hyphens: auto;
 }
 
-/* line 61, ../sass/_messages.scss */
+/* line 82, ../sass/_messages.scss */
 code {
   white-space: pre;
   word-wrap: normal;
@@ -1111,13 +1132,13 @@ code {
   display: block;
 }
 
-/* line 72, ../sass/_messages.scss */
+/* line 93, ../sass/_messages.scss */
 .tip:hover .username {
   visibility: visible;
   opacity: 1;
 }
 
-/* line 77, ../sass/_messages.scss */
+/* line 98, ../sass/_messages.scss */
 .username {
   position: absolute;
   font-size: .9em;
@@ -1137,7 +1158,7 @@ code {
   -o-transition: all .2s ease-in-out;
   transition: all .2s ease-in-out;
 }
-/* line 100, ../sass/_messages.scss */
+/* line 121, ../sass/_messages.scss */
 .username:after {
   content: "";
   position: absolute;
@@ -1149,11 +1170,11 @@ code {
   border-left: .5em solid transparent;
 }
 
-/* line 112, ../sass/_messages.scss */
+/* line 133, ../sass/_messages.scss */
 .message-image-wrapper {
   position: relative;
 }
-/* line 118, ../sass/_messages.scss */
+/* line 139, ../sass/_messages.scss */
 .message-image-wrapper .open-in-new-tab {
   position: absolute;
   top: .2em;
@@ -1164,21 +1185,21 @@ code {
   background-size: 100%;
 }
 
-/* line 128, ../sass/_messages.scss */
+/* line 149, ../sass/_messages.scss */
 .message-image {
   display: inline-block;
   max-height: 5em;
   margin-top: .2em;
   margin-top: .2em;
 }
-/* line 134, ../sass/_messages.scss */
+/* line 155, ../sass/_messages.scss */
 .message-image.exp {
   max-width: 31em;
   max-height: inherit;
   width: 100%;
 }
 
-/* line 141, ../sass/_messages.scss */
+/* line 162, ../sass/_messages.scss */
 .diffUser {
   margin-top: .8em;
   border-top-right-radius: .5em;
@@ -1186,14 +1207,14 @@ code {
   border-top: 1px solid lightgrey;
 }
 
-/* line 147, ../sass/_messages.scss */
+/* line 168, ../sass/_messages.scss */
 .lastOfUser {
   border-bottom: 1px solid lightgrey;
   border-bottom-right-radius: .5em;
   border-bottom-left-radius: .5em;
 }
 
-/* line 154, ../sass/_messages.scss */
+/* line 175, ../sass/_messages.scss */
 .cssanimations.csstransitions .slick-realtime-shit {
   -webkit-animation: realtime-anim 10s ease-out;
   -moz-animation: realtime-anim 10s ease-out;
@@ -1201,12 +1222,12 @@ code {
   animation: realtime-anim 10s ease-out;
 }
 
-/* line 161, ../sass/_messages.scss */
+/* line 182, ../sass/_messages.scss */
 #li-message {
   width: 100%;
 }
 
-/* line 164, ../sass/_messages.scss */
+/* line 185, ../sass/_messages.scss */
 #mymessage {
   resize: none !important;
   width: 100%;
@@ -1222,7 +1243,7 @@ code {
   overflow-y: hidden;
 }
 
-/* line 191, ../sass/_messages.scss */
+/* line 212, ../sass/_messages.scss */
 #first, #last {
   border: none;
   opacity: 0;
@@ -1230,60 +1251,60 @@ code {
 }
 
 @-webkit-keyframes realtime-anim {
-  /* line 198, ../sass/_messages.scss */
+  /* line 219, ../sass/_messages.scss */
   0% {
     border-left: 1px solid #ffbb00;
   }
 
-  /* line 199, ../sass/_messages.scss */
+  /* line 220, ../sass/_messages.scss */
   100% {
     border-left: 1px solid lightgrey;
   }
 }
 
 @-moz-keyframes realtime-anim {
-  /* line 202, ../sass/_messages.scss */
+  /* line 223, ../sass/_messages.scss */
   0% {
     border-left: 1px solid #ffbb00;
   }
 
-  /* line 203, ../sass/_messages.scss */
+  /* line 224, ../sass/_messages.scss */
   100% {
     border-left: 1px solid lightgrey;
   }
 }
 
 @-ms-keyframes realtime-anim {
-  /* line 206, ../sass/_messages.scss */
+  /* line 227, ../sass/_messages.scss */
   0% {
     border-left: 1px solid #ffbb00;
   }
 
-  /* line 207, ../sass/_messages.scss */
+  /* line 228, ../sass/_messages.scss */
   100% {
     border-left: 1px solid lightgrey;
   }
 }
 
 @-o-keyframes realtime-anim {
-  /* line 210, ../sass/_messages.scss */
+  /* line 231, ../sass/_messages.scss */
   0% {
     border-left: 1px solid #ffbb00;
   }
 
-  /* line 211, ../sass/_messages.scss */
+  /* line 232, ../sass/_messages.scss */
   100% {
     border-left: 1px solid lightgrey;
   }
 }
 
 @keyframes realtime-anim {
-  /* line 214, ../sass/_messages.scss */
+  /* line 235, ../sass/_messages.scss */
   0% {
     border-left: 1px solid #ffbb00;
   }
 
-  /* line 215, ../sass/_messages.scss */
+  /* line 236, ../sass/_messages.scss */
   100% {
     border-left: 1px solid lightgrey;
   }
