--- a/client/views/room.html
+++ b/client/views/room.html
@@ -63,7 +63,7 @@
 	</aside>
 	<div class="main">
 
-		<!-- <div class="loading">One sec, fetching your messages..</div> -->
+		<div class="loading">load more messages</div>
 		
 		{{>messages}}
 		
