--- a/client/css/main.css
+++ b/client/css/main.css
@@ -691,7 +691,6 @@ SUPER SLICK TRANSFORMS
 
 /* line 79, ../sass/_room.scss */
 .loading {
-  cursor: pointer;
   display: block;
   width: 100%;
   font-size: 1.3em;
@@ -708,6 +707,7 @@ SUPER SLICK TRANSFORMS
 }
 /* line 96, ../sass/_room.scss */
 .loading.show-loading {
+  cursor: pointer;
   height: auto;
   padding: 1em;
   opacity: 1;
@@ -890,7 +890,16 @@ SUPER SLICK TRANSFORMS
   opacity: .3;
 }
 
-/* line 193, ../sass/_sidebar.scss */
+/* line 194, ../sass/_sidebar.scss */
+.micro-avatar {
+  height: 1em;
+  width: 1em;
+  display: inline-block;
+  background-size: 100% !important;
+  border-radius: 50%;
+}
+
+/* line 203, ../sass/_sidebar.scss */
 .online-user-wrapper {
   text-align: left;
   width: 10em;
@@ -902,7 +911,7 @@ SUPER SLICK TRANSFORMS
   border-bottom: 1px dotted rgba(200, 200, 200, 0.3);
 }
 
-/* line 204, ../sass/_sidebar.scss */
+/* line 214, ../sass/_sidebar.scss */
 .roomid {
   margin-top: 3em;
   text-align: center;
@@ -910,13 +919,13 @@ SUPER SLICK TRANSFORMS
   color: #805e00;
 }
 
-/* line 210, ../sass/_sidebar.scss */
+/* line 220, ../sass/_sidebar.scss */
 .online-users, .roomid {
   float: right;
   width: 100%;
 }
 
-/* line 215, ../sass/_sidebar.scss */
+/* line 225, ../sass/_sidebar.scss */
 .online-users-count {
   color: #444444;
   font-weight: bold;
@@ -942,7 +951,7 @@ SUPER SLICK TRANSFORMS
   */
 }
 @media all and (max-width: 50em) {
-  /* line 215, ../sass/_sidebar.scss */
+  /* line 225, ../sass/_sidebar.scss */
   .online-users-count {
     left: 0 !important;
     opacity: 1;
@@ -951,7 +960,7 @@ SUPER SLICK TRANSFORMS
   }
 }
 
-/* line 256, ../sass/_sidebar.scss */
+/* line 266, ../sass/_sidebar.scss */
 .toggle-sidebar {
   display: none;
   cursor: pointer;
@@ -968,20 +977,20 @@ SUPER SLICK TRANSFORMS
   border: 0.1em solid #cc9600;
 }
 @media all and (max-width: 50em) {
-  /* line 256, ../sass/_sidebar.scss */
+  /* line 266, ../sass/_sidebar.scss */
   .toggle-sidebar {
     display: block;
     left: 0 !important;
   }
 }
-/* line 281, ../sass/_sidebar.scss */
+/* line 291, ../sass/_sidebar.scss */
 .toggle-sidebar .icon-arrow {
   width: 1.665em;
   height: 1.665em;
   margin: 0.7325em 0 0 0.7325em;
 }
 
-/* line 290, ../sass/_sidebar.scss */
+/* line 300, ../sass/_sidebar.scss */
 .status-badge {
   height: .5em;
   width: .5em;
@@ -990,23 +999,23 @@ SUPER SLICK TRANSFORMS
   border-radius: 70%;
   opacity: .5;
 }
-/* line 301, ../sass/_sidebar.scss */
+/* line 311, ../sass/_sidebar.scss */
 .status-badge.online, .status-badge.on {
   background: #29A100;
 }
-/* line 304, ../sass/_sidebar.scss */
+/* line 314, ../sass/_sidebar.scss */
 .status-badge.idle, .status-badge.off {
   background: #FF8200;
 }
 
-/* line 312, ../sass/_sidebar.scss */
+/* line 322, ../sass/_sidebar.scss */
 .fixed-sidebar .logo {
   position: absolute;
   top: 1.5em;
   right: 1em;
 }
 
-/* line 321, ../sass/_sidebar.scss */
+/* line 331, ../sass/_sidebar.scss */
 .markdown-cheatsheet {
   margin: 5em 0;
   padding: 2em 0;
@@ -1014,12 +1023,12 @@ SUPER SLICK TRANSFORMS
   text-align: center;
 }
 
-/* line 331, ../sass/_sidebar.scss */
+/* line 341, ../sass/_sidebar.scss */
 .tags {
   list-style-type: none;
   text-align: center;
 }
-/* line 335, ../sass/_sidebar.scss */
+/* line 345, ../sass/_sidebar.scss */
 .tags #enter-tag {
   padding: 1em 2em;
   width: 10em;
@@ -1028,12 +1037,12 @@ SUPER SLICK TRANSFORMS
   -ms-text-align-last: center;
   text-align: center;
 }
-/* line 343, ../sass/_sidebar.scss */
+/* line 353, ../sass/_sidebar.scss */
 .tags #enter-tag:focus {
   border: none;
   outline: none;
 }
-/* line 348, ../sass/_sidebar.scss */
+/* line 358, ../sass/_sidebar.scss */
 .tags .tag {
   font-size: .82em;
   padding: .3em .7em;
@@ -1044,7 +1053,7 @@ SUPER SLICK TRANSFORMS
   display: inline-block;
   color: black;
 }
-/* line 360, ../sass/_sidebar.scss */
+/* line 370, ../sass/_sidebar.scss */
 .tags .tag:hover {
   cursor: crosshair;
 }
@@ -1350,6 +1359,7 @@ SUPER SLICK TRANSFORMS
 
 /* line 79, ../sass/_messages.scss */
 .message .text, .message p {
+  display: inline-block;
   vertical-align: middle;
   margin: 0em .3em;
   padding: .1em;
@@ -1359,27 +1369,43 @@ SUPER SLICK TRANSFORMS
   -webkit-hyphens: auto;
   -moz-hyphens: auto;
   hyphens: auto;
+  width: 100%;
 }
 
-/* line 93, ../sass/_messages.scss */
+/* line 97, ../sass/_messages.scss */
+.at-username {
+  display: inline-block;
+  padding: 2px;
+  background: #fff8e5;
+}
+
+/* line 103, ../sass/_messages.scss */
+pre {
+  display: block;
+  overflow-x: auto;
+  overflow-y: auto;
+}
+
+/* line 109, ../sass/_messages.scss */
 code {
+  display: block;
   white-space: pre;
   word-wrap: normal;
-  background-color: #333;
   overflow: auto;
-  color: #fff;
-  padding: .7em;
-  border-radius: .2em;
-  display: block;
+  margin: 0 2px;
+  padding: 3px 5px 0;
+  border: 1px solid #ddd;
+  background-color: #f8f8f8;
+  border-radius: 3px;
 }
 
-/* line 104, ../sass/_messages.scss */
+/* line 121, ../sass/_messages.scss */
 .tip:hover .username {
   visibility: visible;
   opacity: 1;
 }
 
-/* line 109, ../sass/_messages.scss */
+/* line 126, ../sass/_messages.scss */
 .username {
   position: absolute;
   font-size: .9em;
@@ -1399,7 +1425,7 @@ code {
   -o-transition: all .2s ease-in-out;
   transition: all .2s ease-in-out;
 }
-/* line 132, ../sass/_messages.scss */
+/* line 149, ../sass/_messages.scss */
 .username:after {
   content: "";
   position: absolute;
@@ -1411,11 +1437,11 @@ code {
   border-left: .5em solid transparent;
 }
 
-/* line 144, ../sass/_messages.scss */
+/* line 161, ../sass/_messages.scss */
 .message-image-wrapper {
   position: relative;
 }
-/* line 150, ../sass/_messages.scss */
+/* line 167, ../sass/_messages.scss */
 .message-image-wrapper .open-in-new-tab {
   position: absolute;
   top: .2em;
@@ -1426,21 +1452,21 @@ code {
   background-size: 100%;
 }
 
-/* line 160, ../sass/_messages.scss */
+/* line 177, ../sass/_messages.scss */
 .message-image {
   display: inline-block;
   max-height: 5em;
   margin-top: .2em;
   margin-top: .2em;
 }
-/* line 166, ../sass/_messages.scss */
+/* line 183, ../sass/_messages.scss */
 .message-image.exp {
   max-width: 31em;
   max-height: inherit;
   width: 100%;
 }
 
-/* line 173, ../sass/_messages.scss */
+/* line 190, ../sass/_messages.scss */
 .diffUser {
   margin-top: .8em;
   border-top-right-radius: .5em;
@@ -1448,14 +1474,14 @@ code {
   border-top: 1px solid lightgrey;
 }
 
-/* line 179, ../sass/_messages.scss */
+/* line 196, ../sass/_messages.scss */
 .lastOfUser {
   border-bottom: 1px solid lightgrey;
   border-bottom-right-radius: .5em;
   border-bottom-left-radius: .5em;
 }
 
-/* line 186, ../sass/_messages.scss */
+/* line 203, ../sass/_messages.scss */
 .cssanimations.csstransitions .slick-realtime-shit {
   -webkit-animation: realtime-anim 10s ease-out;
   -moz-animation: realtime-anim 10s ease-out;
@@ -1463,12 +1489,12 @@ code {
   animation: realtime-anim 10s ease-out;
 }
 
-/* line 193, ../sass/_messages.scss */
+/* line 210, ../sass/_messages.scss */
 #li-message {
   width: 100%;
 }
 
-/* line 196, ../sass/_messages.scss */
+/* line 213, ../sass/_messages.scss */
 #mymessage {
   resize: none !important;
   width: 100%;
@@ -1484,7 +1510,7 @@ code {
   overflow-y: hidden;
 }
 
-/* line 223, ../sass/_messages.scss */
+/* line 240, ../sass/_messages.scss */
 #first, #last {
   border: none;
   opacity: 0;
@@ -1492,63 +1518,86 @@ code {
 }
 
 @-webkit-keyframes realtime-anim {
-  /* line 230, ../sass/_messages.scss */
+  /* line 247, ../sass/_messages.scss */
   0% {
     border-left: 1px solid #ffbb00;
   }
 
-  /* line 231, ../sass/_messages.scss */
+  /* line 248, ../sass/_messages.scss */
   100% {
     border-left: 1px solid lightgrey;
   }
 }
 
 @-moz-keyframes realtime-anim {
-  /* line 234, ../sass/_messages.scss */
+  /* line 251, ../sass/_messages.scss */
   0% {
     border-left: 1px solid #ffbb00;
   }
 
-  /* line 235, ../sass/_messages.scss */
+  /* line 252, ../sass/_messages.scss */
   100% {
     border-left: 1px solid lightgrey;
   }
 }
 
 @-ms-keyframes realtime-anim {
-  /* line 238, ../sass/_messages.scss */
+  /* line 255, ../sass/_messages.scss */
   0% {
     border-left: 1px solid #ffbb00;
   }
 
-  /* line 239, ../sass/_messages.scss */
+  /* line 256, ../sass/_messages.scss */
   100% {
     border-left: 1px solid lightgrey;
   }
 }
 
 @-o-keyframes realtime-anim {
-  /* line 242, ../sass/_messages.scss */
+  /* line 259, ../sass/_messages.scss */
   0% {
     border-left: 1px solid #ffbb00;
   }
 
-  /* line 243, ../sass/_messages.scss */
+  /* line 260, ../sass/_messages.scss */
   100% {
     border-left: 1px solid lightgrey;
   }
 }
 
 @keyframes realtime-anim {
-  /* line 246, ../sass/_messages.scss */
+  /* line 263, ../sass/_messages.scss */
   0% {
     border-left: 1px solid #ffbb00;
   }
 
-  /* line 247, ../sass/_messages.scss */
+  /* line 264, ../sass/_messages.scss */
   100% {
     border-left: 1px solid lightgrey;
   }
+}
+
+/* line 267, ../sass/_messages.scss */
+.typeahead {
+  list-style-type: none;
+}
+/* line 269, ../sass/_messages.scss */
+.typeahead li {
+  display: inline-block;
+  padding: .5em;
+  background: #F5F5F5;
+  float: left;
+  clear: both;
+  width: 12em;
+}
+/* line 279, ../sass/_messages.scss */
+.typeahead li.active {
+  background: #ffbb00;
+}
+/* line 283, ../sass/_messages.scss */
+.typeahead .mention_image {
+  height: 1em;
+  width: 1em;
 }
 
 /* line 1, ../sass/_buttons.scss */
