--- a/client/sass/_messages.scss
+++ b/client/sass/_messages.scss
@@ -77,6 +77,7 @@
 			border:1px solid darkgrey;
 		}
 		.message .text, .message p{
+			display: inline-block;
 			vertical-align: middle;
 			margin: 0em .3em;
 			padding:.1em;
@@ -89,16 +90,32 @@
 			-webkit-hyphens: auto;
 			-moz-hyphens: auto;
 			hyphens: auto;
+
+			width: 100%;
+		}
+
+		.at-username{
+			display: inline-block;
+			padding: 2px;
+			background:lighten($color-main,45%);
+		}
+
+		pre{
+			display: block;
+			// width: 100%;
+			overflow-x: auto;
+			overflow-y: auto;
 		}
 		code{
+			display: block;
 			white-space: pre;
 			word-wrap: normal;
-			background-color: #333;
 			overflow: auto;
-			color: #fff;
-			padding: .7em;
-			border-radius: .2em;
-			display: block;
+			margin: 0 2px;
+			padding: 3px 5px 0;
+			border: 1px solid #ddd;
+			background-color: #f8f8f8;
+			border-radius: 3px;
 		}
 
 		.tip:hover .username{
@@ -245,4 +262,29 @@
 @keyframes realtime-anim{
 	0% { border-left:1px solid $color-main;  }
 	100% { border-left:1px solid $color-border;  }
+}
+
+.typeahead{
+	list-style-type: none;
+	li{
+		display: inline-block;
+		padding:.5em;
+		background:#F5F5F5;
+		float:left;
+		clear: both;
+
+		width: 12em;
+		// text-align: center;
+
+		&.active{
+			background: $color-main;
+		}
+	}
+	.mention_image{
+		height: 1em;
+		width: 1em;
+	}
+	.mention_username{
+
+	}
 }
