@username working thanks to @Francext, link limit in message

--- a/client/sass/_messages.scss
+++ b/client/sass/_messages.scss
@@ -92,6 +92,15 @@
 			hyphens: auto;
 
 			width: 100%;
+
+
+			a{
+				display: inline-block;
+				max-width: 15em;
+				text-overflow: ellipsis;
+				white-space: nowrap;
+				overflow: hidden;
+			}
 		}
 
 		.at-username{
