--- a/client/css/main.css
+++ b/client/css/main.css
@@ -1374,22 +1374,30 @@ SUPER SLICK TRANSFORMS
   hyphens: auto;
   width: 100%;
 }
-
 /* line 97, ../sass/_messages.scss */
+.message .text a, .message p a {
+  display: inline-block;
+  max-width: 15em;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
+}
+
+/* line 106, ../sass/_messages.scss */
 .at-username {
   display: inline-block;
   padding: 2px;
   background: #fff8e5;
 }
 
-/* line 103, ../sass/_messages.scss */
+/* line 112, ../sass/_messages.scss */
 pre {
   display: block;
   overflow-x: auto;
   overflow-y: auto;
 }
 
-/* line 109, ../sass/_messages.scss */
+/* line 118, ../sass/_messages.scss */
 code {
   display: block;
   white-space: pre;
@@ -1402,13 +1410,13 @@ code {
   border-radius: 3px;
 }
 
-/* line 121, ../sass/_messages.scss */
+/* line 130, ../sass/_messages.scss */
 .tip:hover .username {
   visibility: visible;
   opacity: 1;
 }
 
-/* line 126, ../sass/_messages.scss */
+/* line 135, ../sass/_messages.scss */
 .username {
   position: absolute;
   font-size: .9em;
@@ -1428,7 +1436,7 @@ code {
   -o-transition: all .2s ease-in-out;
   transition: all .2s ease-in-out;
 }
-/* line 149, ../sass/_messages.scss */
+/* line 158, ../sass/_messages.scss */
 .username:after {
   content: "";
   position: absolute;
@@ -1440,11 +1448,11 @@ code {
   border-left: .5em solid transparent;
 }
 
-/* line 161, ../sass/_messages.scss */
+/* line 170, ../sass/_messages.scss */
 .message-image-wrapper {
   position: relative;
 }
-/* line 167, ../sass/_messages.scss */
+/* line 176, ../sass/_messages.scss */
 .message-image-wrapper .open-in-new-tab {
   position: absolute;
   top: .2em;
@@ -1455,21 +1463,21 @@ code {
   background-size: 100%;
 }
 
-/* line 177, ../sass/_messages.scss */
+/* line 186, ../sass/_messages.scss */
 .message-image {
   display: inline-block;
   max-height: 5em;
   margin-top: .2em;
   margin-top: .2em;
 }
-/* line 183, ../sass/_messages.scss */
+/* line 192, ../sass/_messages.scss */
 .message-image.exp {
   max-width: 31em;
   max-height: inherit;
   width: 100%;
 }
 
-/* line 190, ../sass/_messages.scss */
+/* line 199, ../sass/_messages.scss */
 .diffUser {
   margin-top: .8em;
   border-top-right-radius: .5em;
@@ -1477,14 +1485,14 @@ code {
   border-top: 1px solid lightgrey;
 }
 
-/* line 196, ../sass/_messages.scss */
+/* line 205, ../sass/_messages.scss */
 .lastOfUser {
   border-bottom: 1px solid lightgrey;
   border-bottom-right-radius: .5em;
   border-bottom-left-radius: .5em;
 }
 
-/* line 203, ../sass/_messages.scss */
+/* line 212, ../sass/_messages.scss */
 .cssanimations.csstransitions .slick-realtime-shit {
   -webkit-animation: realtime-anim 10s ease-out;
   -moz-animation: realtime-anim 10s ease-out;
@@ -1492,12 +1500,12 @@ code {
   animation: realtime-anim 10s ease-out;
 }
 
-/* line 210, ../sass/_messages.scss */
+/* line 219, ../sass/_messages.scss */
 #li-message {
   width: 100%;
 }
 
-/* line 213, ../sass/_messages.scss */
+/* line 222, ../sass/_messages.scss */
 #mymessage {
   resize: none !important;
   width: 100%;
@@ -1513,7 +1521,7 @@ code {
   overflow-y: hidden;
 }
 
-/* line 240, ../sass/_messages.scss */
+/* line 249, ../sass/_messages.scss */
 #first, #last {
   border: none;
   opacity: 0;
@@ -1521,70 +1529,70 @@ code {
 }
 
 @-webkit-keyframes realtime-anim {
-  /* line 247, ../sass/_messages.scss */
+  /* line 256, ../sass/_messages.scss */
   0% {
     border-left: 1px solid #ffbb00;
   }
 
-  /* line 248, ../sass/_messages.scss */
+  /* line 257, ../sass/_messages.scss */
   100% {
     border-left: 1px solid lightgrey;
   }
 }
 
 @-moz-keyframes realtime-anim {
-  /* line 251, ../sass/_messages.scss */
+  /* line 260, ../sass/_messages.scss */
   0% {
     border-left: 1px solid #ffbb00;
   }
 
-  /* line 252, ../sass/_messages.scss */
+  /* line 261, ../sass/_messages.scss */
   100% {
     border-left: 1px solid lightgrey;
   }
 }
 
 @-ms-keyframes realtime-anim {
-  /* line 255, ../sass/_messages.scss */
+  /* line 264, ../sass/_messages.scss */
   0% {
     border-left: 1px solid #ffbb00;
   }
 
-  /* line 256, ../sass/_messages.scss */
+  /* line 265, ../sass/_messages.scss */
   100% {
     border-left: 1px solid lightgrey;
   }
 }
 
 @-o-keyframes realtime-anim {
-  /* line 259, ../sass/_messages.scss */
+  /* line 268, ../sass/_messages.scss */
   0% {
     border-left: 1px solid #ffbb00;
   }
 
-  /* line 260, ../sass/_messages.scss */
+  /* line 269, ../sass/_messages.scss */
   100% {
     border-left: 1px solid lightgrey;
   }
 }
 
 @keyframes realtime-anim {
-  /* line 263, ../sass/_messages.scss */
+  /* line 272, ../sass/_messages.scss */
   0% {
     border-left: 1px solid #ffbb00;
   }
 
-  /* line 264, ../sass/_messages.scss */
+  /* line 273, ../sass/_messages.scss */
   100% {
     border-left: 1px solid lightgrey;
   }
 }
 
-/* line 267, ../sass/_messages.scss */
+/* line 276, ../sass/_messages.scss */
 .typeahead {
   list-style-type: none;
 }
-/* line 269, ../sass/_messages.scss */
+/* line 278, ../sass/_messages.scss */
 .typeahead li {
   display: inline-block;
   padding: .5em;
@@ -1596,11 +1604,11 @@ code {
   overflow: hidden;
   text-overflow: ellipsis;
 }
-/* line 279, ../sass/_messages.scss */
+/* line 288, ../sass/_messages.scss */
 .typeahead li.active {
   background: #ffbb00;
 }
-/* line 287, ../sass/_messages.scss */
+/* line 296, ../sass/_messages.scss */
 .typeahead .mention_image {
   height: 1em;
   width: 1em;
