--- a/client/views/room.html
+++ b/client/views/room.html
@@ -72,4 +72,5 @@
 		{{/unless}}
 	</div>
 	{{>markdownCheatsheet}}
+	<audio id="new_message" src="/audio/notif.mp3" preload="auto"></audio>
 </template>
